[metadata]
name = xmipy
version = attr: xmipy.__version__
description = xmipy is an extension to the bmipy Python package
long_description = file: README.md
long_description_content_type = text/markdown
author = Martijn Russcher, Julian Hofer, Joseph D. Hughes
author_email = Martijn.Russcher@deltares.nl, Julian.Hofer@deltares.nl, jdhughes@usgs.gov
license = CC0
license_files = LICENSE
platform = Windows, Mac OS-X, Linux
classifiers =
    Intended Audience :: Science/Research
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Topic :: Scientific/Engineering :: Hydrology
url = https://github.com/Deltares/xmipy
download_url = https://pypi.org/project/xmipy/

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
install_requires =
    bmipy
    numpy

[options.extras_require]
tests =
    pytest
    pytest-cov
    requests
    mfpymake
    flopy
lint =
    mypy
    black
    isort

[options.package_data]
xmipy = py.typed

[flake8]
exclude =
    .git,
    __pycache__,
    autotest
ignore =
    # https://flake8.pycqa.org/en/latest/user/error-codes.html
    F401, # 'module' imported but unused
    # https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
    E402, # module level import not at top of file
    W292, # no newline at end of file
    W293, # blank line contains whitespace
    W391, # blank line at end of file
    W503, # line break before binary operator
    W504, # line break after binary operator
    E203  # whitespace before ':'
statistics = True
max-line-length = 92
